Fix: neutralise picture wrap in history timeline with display:contents to preserve layout

--- a/src/sass/components/_history-timeline.scss
+++ b/src/sass/components/_history-timeline.scss
@@ -43,6 +43,14 @@
                 box-shadow: 0px 4px 6px 2px rgba(0, 0, 0, 0.25);
                 // outline: 2px dashed orange;
 
+                .picture-wrap {
+                    display: contents;
+
+                    &::before {
+                        display: none;
+                    }
+                }
+
                 img {
                     width: 100%;
                     height: 75%;
